--- a/vdjdb.ipynb
+++ b/vdjdb.ipynb
@@ -387,7 +387,9 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "epitops_dict = {i:0 for i in raw_data['antigen.epitope']}\n",
@@ -3465,7 +3467,9 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scipy.stats import spearmanr\n",
@@ -6285,7 +6289,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -8284,7 +8290,9 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "spearmanc = spearmanr(AB_continues[epitop_index, :])"
@@ -10064,7 +10072,9 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mutual_information = np.zeros((n_features, n_features))\n",
